--- a/Tea/index.html
+++ b/Tea/index.html
@@ -81,15 +81,15 @@
 
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="rwding" style="background-image: url(../img/drink.jpg);">
+                        <div class="rwding" style="background-image: url(img/drink.jpg);">
                             
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="rwding" style="background-image: url(../img/top3.jpg);"></div>
+                        <div class="rwding" style="background-image: url(img/top3.jpg);"></div>
                     </div>
                     <div class="carousel-item">
-                        <div class="rwding" style="background-image: url(../img/top5.jpg);"></div>
+                        <div class="rwding" style="background-image: url(img/top5.jpg);"></div>
                     </div>
                 </div>
 
