--- a/Tea/index.html
+++ b/Tea/index.html
@@ -160,7 +160,7 @@
                                 <div class="col-lg-4 col-sm-6 col-12">
                                     <a class="products-item">
                                         <div class="products-img">
-                                            <img src="../img/cake1.jpg">
+                                            <img src="img/cake1.jpg">
                                         </div>
                                         <div class="product-info">
                                             <div class="prouct-title fs-4">草莓蛋糕</div>
@@ -172,7 +172,7 @@
                                 <div class="col-lg-4 col-sm-6 col-12">
                                     <a class="products-item">
                                         <div class="products-img">
-                                            <img src="../img/cake2.jpg">
+                                            <img src="img/cake2.jpg">
                                         </div>
                                         <div class="product-info">
                                             <div class="prouct-title fs-4">水果蛋糕</div>
@@ -185,7 +185,7 @@
                                 <div class="col-lg-4 col-sm-6 col-12">
                                     <a class="products-item">
                                         <div class="products-img">
-                                            <img src="../img/cake3.jpg">
+                                            <img src="img/cake3.jpg">
                                         </div>
                                         <div class="product-info">
                                             <div class="prouct-title fs-4">提拉米蘇</div>
@@ -202,7 +202,7 @@
             </section>
             
             <div class="images" data-aos="fade-down" data-aos-duration="500">
-                <div class="images-inner" style="background-image: url(../img/pancakes.jpg);">                 
+                <div class="images-inner" style="background-image: url(img/pancakes.jpg);">                 
                 </div>
             </div>
 
