--- a/Tea/index.html
+++ b/Tea/index.html
@@ -78,9 +78,9 @@
          <!-- Swiper -->
         <div class="swiper-container">
             <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="img/drink.jpg" alt="Slide 1"></div>
-            <div class="swiper-slide"><img src="img/top3.jpg" alt="Slide 2"></div>
-            <div class="swiper-slide"><img src="img/top5.jpg" alt="Slide 3"></div>
+            <div class="swiper-slide"><img src="img/drink.jpg"></div>
+            <div class="swiper-slide"><img src="img/top3.jpg"></div>
+            <div class="swiper-slide"><img src="img/top5.jpg"></div>
             </div>
             <!-- 添加分页器 -->
             <div class="swiper-pagination"></div>
